[package]
name = "hello-rust"
version = "0.1.0"
authors = ["victor"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
queues = "1.1.0"
reqwest = { version = "0.11.6", features = ["json"]}
tokio = { version = "1", features = ["full"] }
clap = "2.33.3"
chrono = "0.4"
dotenv = "0.15.0"
itertools = "0.10.1"
ndarray = "0.15.4"
regex = "1.5.4"
lazy_static = "1.4.0"
pathfinding = "0.1.10"
